a simple SqlTimeFunction